--- a/PlotTst/Project4.dproj
+++ b/PlotTst/Project4.dproj
@@ -91,6 +91,10 @@
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="..\Core\CustomPlot.pas"/>
+        <DCCReference Include="DlgEditParam.pas">
+            <Form>FormEditParam</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
