--- a/Core/Core.dproj
+++ b/Core/Core.dproj
@@ -174,6 +174,7 @@
         <DCCReference Include="fs_oleg.dcp"/>
         <DCCReference Include="JvRuntimeDesign.dcp"/>
         <DCCReference Include="fs21.dcp"/>
+        <DCCReference Include="GR32_RSXE7.dcp"/>
         <DCCReference Include="..\AbstractPlugin.pas"/>
         <DCCReference Include="..\DeviceIntf.pas"/>
         <DCCReference Include="..\ExtendIntf.pas"/>
@@ -216,6 +217,7 @@
         <DCCReference Include="Math.Telesistem.pas"/>
         <DCCReference Include="XMLScript.IKN.pas"/>
         <DCCReference Include="Plot.pas"/>
+        <DCCReference Include="Plot.GR32.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
