--- a/PlotTst/Project4.dproj
+++ b/PlotTst/Project4.dproj
@@ -95,6 +95,10 @@
             <Form>FormEditParam</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="..\VCLData\SetGPClolor.pas">
+            <Form>FormSetGPColor</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
